--- a/PersonalQuiz/Storyboards/Base.lproj/Main.storyboard
+++ b/PersonalQuiz/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -330,12 +330,17 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Результаты" id="9gC-q2-fhb">
+                        <barButtonItem key="backBarButtonItem" title="ster" id="T8K-Bl-SZ9"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="QHv-7c-QXt">
                             <connections>
                                 <segue destination="tsa-9q-kvq" kind="unwind" unwindAction="unwindFor:" id="gaK-eY-rUN"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="quB-aO-ZQk" id="QL4-64-Kd4"/>
+                        <outlet property="resultLabel" destination="BwF-SW-yds" id="gXp-EO-nLo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mfb-f9-mdD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="tsa-9q-kvq" userLabel="Exit" sceneMemberID="exit"/>
